--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,52 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    background-color: antiquewhite;
-    font-size: 24px;
-    display: block;
+  background-color: antiquewhite;
+  font-size: 24px;
+  display: block;
+  color:darkslategray;
 }
 
-#header {
-    width: 100%;
-    background-color: #fbdada;
-    margin: 0;
+header {
+  width: 100%;
+  background-color: #fbdada;
+  margin: 0;
 }
 
 .container {
-    max-width: 900px;
-    margin: 0 auto;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .header-content {
-    padding-top: 30px;
-    padding-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .lang {
-    font-weight: bold;
-    cursor: pointer;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .typeStats {
-    padding: 0 10px;
-    font-size: 18px;
+  padding: 0 10px;
+  font-size: 18px;
+}
+
+.typingBlock {
+  margin: 0 auto;
+}
+
+.inputBlock {
+  max-width: 600px;
+  margin: 100px auto 0;
+}
+
+.typingLine {
+  font-size: 24px;
+  width: 600px;
 }
