--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,10 @@
   padding: 0;
 }
 body {
-  background-color: antiquewhite;
+  background: linear-gradient(45deg, #EECFBA, #C5DDE8);
   font-size: 24px;
   display: block;
   color:darkslategray;
-}
-
-header {
-  width: 100%;
-  background-color: #fbdada;
-  margin: 0;
 }
 
 .container {
@@ -47,6 +41,6 @@ header {
 }
 
 .typingLine {
-  font-size: 24px;
+  font-size: 20px;
   width: 600px;
 }
