--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 
 .inputBlock {
   max-width: 600px;
-  margin: 150px auto 150px;
+  margin: 150px auto 120px;
 }
 
 .typingLine {
@@ -56,4 +56,57 @@ body {
 .textForPrint {
   font-size: 19px;
   color: rgb(48, 80, 80);
+}
+
+
+/*Keyboard styles*/
+
+.keyboard {
+  max-width: 780px;
+  margin: 0 auto 100px;
+  font-size: 18px;
+}
+
+.keyboardLine {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4px;
+}
+
+.but {
+  width: 38px;
+  height: 40px;
+  border-width: 2px;
+  border-color:rgb(48, 80, 80);
+  border-style: solid;
+  border-radius: 5px;
+  padding: 2px 3px;
+}
+
+.backspace, .enter, .capsLock, .tab, .shift, .space {
+  width: 88px;
+  height: 32px;
+  border-width: 2px;
+  border-color:rgb(48, 80, 80);
+  border-style: solid;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 12px;
+}
+
+.bSymb2 {
+  float: right;
+}
+
+.tab {
+  width: 66px;
+}
+
+.shift {
+  width: 107px;
+}
+
+.space {
+  margin: 0 auto;
+  width: 360px;
 }
