--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ header {
   max-width: 900px;
   margin: 0 auto;
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: 14px;
   font-size: 24px;
   display: flex;
   justify-content: space-between;
@@ -35,6 +35,14 @@ header {
 }
 
 /* Dropdown menu (in input block)*/
+.dropdownContainer {
+  position:absolute;
+  z-index: 1;
+  top: 30px;
+  right: 0;
+  left: 0;
+}
+
 .dropdown {
   position: relative;
   margin: 0 auto 110px;
@@ -47,8 +55,7 @@ header {
   padding: 10px;
   font-size: 18px;
   cursor: pointer;
-  border-radius: 5px;
-  background-color: rgba(168, 168, 168, 0.5);
+  font-weight: 600;
 }
 
 .dropdown-content {
@@ -56,7 +63,7 @@ header {
   position: absolute;
   min-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 2;
   border-radius: 8px;
 }
 
@@ -75,7 +82,7 @@ header {
 /* Input block */
 .inputBlock {
   max-width: 600px;
-  margin: 20px auto 100px;
+  margin: 130px auto 130px;
 }
 
 .typingLine {
@@ -111,7 +118,7 @@ header {
 
 .keyboard {
   max-width: 780px;
-  margin: 0 auto 100px;
+  margin: 0 auto 110px;
   font-size: 18px;
 }
 
