--- a/src/index.css
+++ b/src/index.css
@@ -180,7 +180,7 @@ header {
 }
 .hand1::after {
   content: "";
-  background-image: url('../img/hand1.png');
+  background-image: url('img/hand1.png');
   width: 85px;
   height: 100px;
   right: -50px;
@@ -195,7 +195,7 @@ header {
 }
 .hand2::after {
   content: "";
-  background-image: url('../img/hand2.png');
+  background-image: url('img/hand2.png');
   width: 85px;
   height: 100px;
   left: 2px;
@@ -210,7 +210,7 @@ header {
 }
 .hand3::after {
   content: "";
-  background-image: url('../img/hand3.png');
+  background-image: url('img/hand3.png');
   width: 85px;
   height: 100px;
   left: -15px;
@@ -225,11 +225,41 @@ header {
 }
 .hand4::after {
   content: "";
-  background-image: url('../img/hand4.png');
+  background-image: url('img/hand4.png');
   width: 85px;
   height: 100px;
   left: -32px;
   top: 16px;
+  position: absolute;
+  opacity: 75%;
+  z-index: 5;
+  display:block;
+}
+.hand5 {
+  display:block;
+}
+.hand5::after {
+  content: "";
+  background-image: url('img/hand5.png');
+  width: 85px;
+  height: 100px;
+  left: -20px;
+  bottom: -20px;
+  position: absolute;
+  opacity: 75%;
+  z-index: 5;
+  display:block;
+}
+.hand6 {
+  display:block;
+}
+.hand6::after {
+  content: "";
+  background-image: url('img/hand6.png');
+  width: 85px;
+  height: 100px;
+  bottom: -20px;
+  right: -20px;
   position: absolute;
   opacity: 75%;
   z-index: 5;
@@ -240,7 +270,7 @@ header {
 }
 .hand7::after {
   content: "";
-  background-image: url('../img/hand7.png');
+  background-image: url('img/hand7.png');
   width: 85px;
   height: 100px;
   top: 16px;
@@ -255,7 +285,7 @@ header {
 }
 .hand8::after {
   content: "";
-  background-image: url('../img/hand8.png');
+  background-image: url('img/hand8.png');
   width: 85px;
   height: 100px;
   top: 18px;
@@ -270,7 +300,7 @@ header {
 }
 .hand9::after {
   content: "";
-  background-image: url('../img/hand9.png');
+  background-image: url('img/hand9.png');
   width: 85px;
   height: 100px;
   top: 16px;
@@ -285,7 +315,7 @@ header {
 }
 .hand10::after {
   content: "";
-  background-image: url('../img/hand10.png');
+  background-image: url('img/hand10.png');
   width: 85px;
   height: 100px;
   top: 10px;
