words fix and footer color

--- a/src/index.css
+++ b/src/index.css
@@ -334,7 +334,7 @@ header {
 
 /* Footer */
 footer {
-  background-color: #2C497F;
+  background-color: #5b4a73;
   display: flex;
   white-space: nowrap;
 }
