--- a/src/index.css
+++ b/src/index.css
@@ -40,18 +40,12 @@ header {
 
 /* Dropdown menu (in input block)*/
 .dropdownContainer {
-  position:absolute;
-  z-index: 1;
-  top: 30px;
-  right: 0;
-  left: 0;
   border-radius: 8px;
 }
 
 .dropdown {
   position: relative;
-  margin: 0 auto 110px;
-  max-width: 180px;
+  min-width: 180px;
   text-align: center;
   background-color: #5b4a73;
 }
